gcc/testsuite/rust/compile/break-rust2.rs
fn main() {
    break (rust);
    // { dg-error "failed to find name: rust" "" { target *-*-* } .-1 }
}
